--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,7 +5,7 @@ on:
     - cron: '15 * * * *' # 주기적으로 실행하기 위한 스케줄링 - cron 설정
 
 jobs:
-  cron:
+  build:
     runs-on: ubuntu-latest
 
     strategy:
