--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: SNKRS_Notification
 
 on:
   schedule:
-    - cron: '25 * * * *' # 주기적으로 실행하기 위한 스케줄링 - cron 설정
+    - cron: '1 * * * *'
 
 jobs:
   build:
