--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,13 @@
 name: SNKRS_Notification
 
+
 on:
-  schedule:
-    - cron: '99 99 * * *' # github action이 정확히 해당 시간에 실행하지 못한다.
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+#  schedule:
+#    - cron: '99 99 * * *' # github action이 정확한 시간에 실행하지 못한다.
 
 jobs:
   build:
